# telegram-hosted-mcp

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml  test.sh
alembic/: env.py
alembic/versions/: 001_initial.py
app/: __init__.py  config.py  database.py  main.py
app/auth/: __init__.py  oauth.py  telegram_auth.py  tokens.py
app/mcp/: middleware.py  server.py
app/mcp/tools/: __init__.py  chats.py  contacts.py  drafts.py  messages.py  privacy.py  users.py
app/models/: __init__.py  audit.py  oauth.py  session.py
app/telegram/: client_pool.py  session_store.py
app/templates/: 2fa.html  base.html  code.html  phone.html  success.html
