[project]
name = "telegram-hosted-mcp"
version = "0.1.0"
description = "Hosted multi-tenant Telegram MCP server for Claude Teams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.18",
    "jinja2>=3.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Telegram
    "telethon>=1.37.0",

    # MCP
    "mcp>=1.8.0",

    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=44.0.0",
    "itsdangerous>=2.0.0",

    # HTTP client
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
